--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,14 +13,13 @@ semver = "0.9.0"
 rustc-serialize = "0.3.16"
 git2 = "0.7.5"
 clog = "0.9.1"
-hubcaps = "0.3"
-hyper = "0.10"
 url = "1.2"
 clippy = {version = "<0.1.0", optional = true}
 travis-after-all = "2.0.0"
 env_logger = "0.3.0"
-hyper-native-tls = "0.2.2"
 clap = "2.32.0"
+futures = "0.3"
+hubcaps = "0.6"
 
 [features]
 default = []
