--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,19 +7,19 @@ license = "MIT"
 
 [dependencies]
 term = "0.2"
-toml = "0.1"
 regex = "0.1"
 semver = "0.9.0"
-rustc-serialize = "0.3.16"
 git2 = "0.7.5"
 clog = "0.9.1"
 url = "1.2"
 clippy = {version = "<0.1.0", optional = true}
 travis-after-all = "2.0.0"
 clap = "2.32.0"
+cargo_toml = "0.8"
 env_logger = "0.7"
 futures = "0.3"
 hubcaps = "0.6"
+toml = "0.5"
 
 [features]
 default = []
