--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,11 +13,11 @@ cargo_toml = "0.8"
 clap = "2.33"
 clog = "0.9"
 env_logger = "0.7"
-futures = "0.3"
 git2 = "0.13"
 regex = "1.4"
 semver = "0.11"
 term = "0.6"
+tokio = "0.2"
 toml = "0.5"
 url = "2.1"
 
