--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,9 @@ readme = "README.md"
 cargo_toml = "0.8"
 clap = "2.33"
 clog = "0.9"
-env_logger = "0.7"
+env_logger = { git = "https://github.com/env-logger-rs/env_logger", rev = "b8c3754" }
 git2 = "0.13"
+log = "0.4"
 regex = "1.4"
 semver = "0.11"
 term = "0.6"
