--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,8 @@ git2 = "0.13"
 log = "0.4"
 regex = "1.4"
 semver = "0.11"
-term = "0.6"
-tokio = "0.2"
+term = "0.7"
+tokio = { version = "1", features = ["full"] }
 toml = "0.5"
 url = "2.1"
 
